mejor modularización en js y cambios mínimos en css

--- a/index.html
+++ b/index.html
@@ -1089,7 +1089,7 @@
 
                     <!-- Bachillerato en Ciencias de la Salud -->
                     <div class="education-item">
-                        <h4 id="highschool-title">Bachillerato en Ciencias de la Salud</h4>
+                        <h4 id="highschool-title" class = "formal-studies-title">Bachillerato en Ciencias de la Salud</h4>
                         <p id="highschool-center" class="issuer"><b>Centro:</b> IES El Getares (Algeciras)</p>
                         <p id="highschool-date" class="date"><b>Fecha:</b> Septiembre 2020 - Junio 2022</p>
                         <p id="highschool-description" class="description">
@@ -1112,7 +1112,7 @@
 
                     <!-- FP Superior en Desarrollo de Aplicaciones Multiplataforma (DAM) -->
                     <div class="education-item">
-                        <h4 id="dam-title">FPGS en Desarrollo de Aplicaciones Multiplataforma (DAM)</h4>
+                        <h4 id="dam-title" class = "formal-studies-title">FPGS en Desarrollo de Aplicaciones Multiplataforma (DAM)</h4>
                         <p id="dam-center" class="issuer"><b>Centro:</b> IES Rafael Alberti (Cádiz)</p>
                         <p id="dam-date" class="date"><b>Fecha:</b> Septiembre 2022 - Junio 2024</p>
                         <p id="dam-description" class="description">
@@ -1139,7 +1139,7 @@
                     <h3 id="certifications">📜 Certificaciones</h3>
 
                     <div class="education-item">
-                        <h4 id="cybersec-title">Introduction to Cybersecurity</h4>
+                        <h4 id="cybersec-title" class = "certification-title">Introduction to Cybersecurity</h4>
                         <p id="cybersec-center" class="issuer"><b>Centro:</b> Cisco Networking Academy</p>
                         <p id="cybersec-date" class="date"><b>Fecha:</b> Enero 2025</p>
                         <p id="cybersec-description" class="description">
@@ -1154,7 +1154,7 @@
                     </div>
 
                     <div class="education-item">
-                        <h4 id="networkingbasics-title">Networking Basics</h4>
+                        <h4 id="networkingbasics-title" class = "certification-title">Networking Basics</h4>
                         <p id="networkingbasics-center" class="issuer"><b>Centro:</b> Cisco Networking Academy</p>
                         <p id="networkingbasics-date" class="date"><b>Fecha:</b> Enero 2025</p>
                         <p id="networkingbasics-description" class="description">
