Popup de descargar CV para mis CVs especializados.

--- a/index.html
+++ b/index.html
@@ -161,6 +161,28 @@
 
 
 
+        <!-- Popup para elegir tipo de CV -->
+         
+        <div id="cv-popup" class="popup hidden">
+            <div class="cv-popup-content">
+            <span class="close-cv-btn" id="close-cv-popup" title="Cerrar">✖</span>
+            <h2 class="cv-popup-header">Selecciona el tipo de CV</h2>
+        
+            <div class="cv-buttons">
+                <button id="cv-fullstack-btn" class="cv-fullstack-btn">CV Fullstack / Mobile</button>
+                <button id="cv-cyber-btn" class="cv-cyber-btn">CV Ciberseguridad</button>
+            </div>
+            </div>
+        </div>
+  
+  
+
+
+
+
+
+
+
 
 
 
