Pagina de proyectos completada, falta traducir los nuevos contenidos de la seccion de proyectos y añadir los CVs en ingles de ciberseguridad y fullstack.

--- a/index.html
+++ b/index.html
@@ -246,9 +246,40 @@
         <section class="projects">
             <div class="container">
                 <h2 id="projects-title" class="projects-title">Proyectos</h2>
-                <p id="no-projects" class="no-projects">Aún no hay proyectos destacables 😔</p>
+            
+                <!-- Tarjetas de proyectos -->
+                <div class="project-grid">
+                    <!-- Proyecto 1 -->
+                    <div class="project-card">
+                        <img src="resources/Projects/ProyectoPortfolio.png" alt="My portfolio Preview" class="project-img" />
+                        <h3 class="project-name">Mi portfolio</h3>
+                        <p class="project-desc">
+                            Portfolio personal responsive creado con HTML, CSS y JavaScript. Incluye animaciones suaves, sección de proyectos y despliegue mediante GitHub.
+                        </p>
+                        <div class="project-techs">
+                            <img src="resources/Software_Icons/HTML5.png" alt="HTML" />
+                            <img src="resources/Software_Icons/CSS3.png" alt="CSS" />
+                            <img src="resources/Software_Icons/JavaScript.png" alt="JavaScript" />
+                            <img src="resources/Software_Icons/Git.png" alt="Git" />
+                            <img src="resources/Software_Icons/github.png" alt="GitHub" />
+                            <img src="resources/Software_Icons/Vscode.png" alt="VsCode" />
+                        </div>
+                        <div class="project-buttons">
+                            <!-- Enlace al proyecto -->
+                            <a href="https://adrisp16.github.io/portfolio/" class="project-btn green" target="_blank">Take a look</a>
+                            <!-- Enlace al repositorio en GitHub -->
+                            <a href="https://github.com/AdriSP16/portfolio" class="project-btn dark" target="_blank">
+                                <img src="resources/Software_Icons/github_inverted.png" alt="GitHub" class="icon-github" />
+                                See code
+                            </a>
+                        </div>                  
+                    </div>
+                </div>
             </div>
         </section>
+
+  
+  
 
 
 
@@ -359,6 +390,25 @@
                     </a>
                     <a href="https://developer.android.com/jetpack/compose" target="_blank">
                         <img src="resources/Software_Icons/JetpackCompose.png" alt="Jetpack Compose Logo">Jetpack Compose
+                    </a>
+                </div>
+            </div>
+
+            <!-- IDEs -->
+            <div class="skill-category">
+                <h3>IDE</h3>
+                <div class="skill-icons">
+                    <a href="" target="_blank">
+                        <img src="resources/Software_Icons/VsCode.png" alt="Visual Studio Code Logo">Visual Studio Code
+                    </a>
+                    <a href="" target="_blank">
+                        <img src="resources/Software_Icons/AndroidStudio.png" alt="Android Studio Logo">Android Studio
+                    </a>
+                    <a href="" target="_blank">
+                        <img src="resources/Software_Icons/Intellij.png" alt="IntelliJ Logo">IntelliJ
+                    </a>
+                    <a href="" target="_blank">
+                        <img src="resources/Software_Icons/Pycharm.png" alt="Pycharm Logo">Pycharm
                     </a>
                 </div>
             </div>
