--- a/index.html
+++ b/index.html
@@ -44,6 +44,16 @@
         <script type="module" src="js/script.js" defer></script>
     </head>
 
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-RZDS3PLGPD"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-RZDS3PLGPD');
+    </script>
+
     <body>
 
         <!-- Navbar -->
