Traduccion de la Project section completada.

--- a/index.html
+++ b/index.html
@@ -262,8 +262,8 @@
                     <!-- Proyecto 1 -->
                     <div class="project-card">
                         <img src="resources/Projects/ProyectoPortfolio.png" alt="My portfolio Preview" class="project-img" />
-                        <h3 class="project-name">Mi portfolio</h3>
-                        <p class="project-desc">
+                        <h3 id="miportfolio-name" class="project-name">Mi portfolio</h3>
+                        <p id="miportfolio-desc" class="project-desc">
                             Portfolio personal responsive creado con HTML, CSS y JavaScript. Incluye animaciones suaves, sección de proyectos y despliegue mediante GitHub.
                         </p>
                         <div class="project-techs">
@@ -276,11 +276,11 @@
                         </div>
                         <div class="project-buttons">
                             <!-- Enlace al proyecto -->
-                            <a href="https://adrisp16.github.io/portfolio/" class="project-btn green" target="_blank">Take a look</a>
+                            <a href="https://adrisp16.github.io/portfolio/" id="project-btn-green" class="project-btn green" target="_blank">Take a look</a>
                             <!-- Enlace al repositorio en GitHub -->
-                            <a href="https://github.com/AdriSP16/portfolio" class="project-btn dark" target="_blank">
+                            <a href="https://github.com/AdriSP16/portfolio" id="project-btn-dark" class="project-btn dark" target="_blank">
                                 <img src="resources/Software_Icons/github_inverted.png" alt="GitHub" class="icon-github" />
-                                See code
+                                <span>See code</span>
                             </a>
                         </div>                  
                     </div>
