--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <!-- 🌐 Selector de idioma (a la derecha) -->
                 <select id="language-switcher" class="language-switcher" onchange="changeLanguage(this.value)">
                     <option value="ca">Catalá</option>
-                    <!-- NOT IMPLEMENTED YET <option value="cn">Chinese</option> -->
+                    <option value="zh">Chinese</option>
                     <!-- NOT IMPLEMENTED YET <option value="hr">Croatian</option> -->
                     <option value="cs">Czech</option>
                     <option value="da">Danish</option>
@@ -93,7 +93,7 @@
                     <!-- NOT IMPLEMENTED YET <option value="ko">Korean</option> -->
                     <option value="pl">Polish</option>
                     <option value="pt">Portuguese</option>
-                    <!-- NOT IMPLEMENTED YET <option value="ru">Russian</option> -->
+                    <option value="ru">Russian</option>
                     <!-- NOT IMPLEMENTED YET <option value="si">Slovenian</option> -->
                     <!-- NOT IMPLEMENTED YET <option value="se">Sweden</option> -->
                     <!-- NOT IMPLEMENTED YET <option value="th">Thai</option> -->
@@ -1083,7 +1083,7 @@
         <!-- Popup de las banderas con mapa -->
         <div id="mapPopup" class="map-popup">
             <div class="popup-content">
-                <h1 id="flag-popup-title">Ciudades preferidas</h1>
+                <h1 id="flag-popup-title">Ciudades y regiones preferidas en</h1>
                 <div id="mapContainer"></div>
                 <span class="flags-close-btn">✖</span>  <!-- Eliminamos el onclick aquí -->
             </div>
