Grid de proyectos arreglado.

--- a/index.html
+++ b/index.html
@@ -284,6 +284,82 @@
                             </a>
                         </div>                  
                     </div>
+
+                    <!-- Proyecto 1 -->
+                    <div class="project-card">
+                        <img src="resources/Projects/ProyectoPortfolio.png" alt="My portfolio Preview" class="project-img" />
+                        <h3 id="miportfolio-name" class="project-name">Mi portfolio</h3>
+                        <p id="miportfolio-desc" class="project-desc">
+                            Portfolio personal responsive creado con HTML, CSS y JavaScript. Incluye animaciones suaves, sección de proyectos y despliegue mediante GitHub.
+                        </p>
+                        <div class="project-techs">
+                            <img src="resources/Software_Icons/HTML5.png" alt="HTML" />
+                            <img src="resources/Software_Icons/CSS3.png" alt="CSS" />
+                            <img src="resources/Software_Icons/JavaScript.png" alt="JavaScript" />
+                            <img src="resources/Software_Icons/Git.png" alt="Git" />
+                            <img src="resources/Software_Icons/github.png" alt="GitHub" />
+                            <img src="resources/Software_Icons/Vscode.png" alt="VsCode" />
+                        </div>
+                        <div class="project-buttons">
+                            <!-- Enlace al proyecto -->
+                            <a href="https://adrisp16.github.io/portfolio/" id="project-btn-green" class="project-btn green" target="_blank">Take a look</a>
+                            <!-- Enlace al repositorio en GitHub -->
+                            <a href="https://github.com/AdriSP16/portfolio" id="project-btn-dark" class="project-btn dark" target="_blank">
+                                <img src="resources/Software_Icons/github_inverted.png" alt="GitHub" class="icon-github" />
+                                <span>See code</span>
+                            </a>
+                        </div>                  
+                    </div>
+                    <!-- Proyecto 1 -->
+                    <div class="project-card">
+                        <img src="resources/Projects/ProyectoPortfolio.png" alt="My portfolio Preview" class="project-img" />
+                        <h3 id="miportfolio-name" class="project-name">Mi portfolio</h3>
+                        <p id="miportfolio-desc" class="project-desc">
+                            Portfolio personal responsive creado con HTML, CSS y JavaScript. Incluye animaciones suaves, sección de proyectos y despliegue mediante GitHub.
+                        </p>
+                        <div class="project-techs">
+                            <img src="resources/Software_Icons/HTML5.png" alt="HTML" />
+                            <img src="resources/Software_Icons/CSS3.png" alt="CSS" />
+                            <img src="resources/Software_Icons/JavaScript.png" alt="JavaScript" />
+                            <img src="resources/Software_Icons/Git.png" alt="Git" />
+                            <img src="resources/Software_Icons/github.png" alt="GitHub" />
+                            <img src="resources/Software_Icons/Vscode.png" alt="VsCode" />
+                        </div>
+                        <div class="project-buttons">
+                            <!-- Enlace al proyecto -->
+                            <a href="https://adrisp16.github.io/portfolio/" id="project-btn-green" class="project-btn green" target="_blank">Take a look</a>
+                            <!-- Enlace al repositorio en GitHub -->
+                            <a href="https://github.com/AdriSP16/portfolio" id="project-btn-dark" class="project-btn dark" target="_blank">
+                                <img src="resources/Software_Icons/github_inverted.png" alt="GitHub" class="icon-github" />
+                                <span>See code</span>
+                            </a>
+                        </div>                  
+                    </div>
+                    <!-- Proyecto 1 -->
+                    <div class="project-card">
+                        <img src="resources/Projects/ProyectoPortfolio.png" alt="My portfolio Preview" class="project-img" />
+                        <h3 id="miportfolio-name" class="project-name">Mi portfolio</h3>
+                        <p id="miportfolio-desc" class="project-desc">
+                            Portfolio personal responsive creado con HTML, CSS y JavaScript. Incluye animaciones suaves, sección de proyectos y despliegue mediante GitHub.
+                        </p>
+                        <div class="project-techs">
+                            <img src="resources/Software_Icons/HTML5.png" alt="HTML" />
+                            <img src="resources/Software_Icons/CSS3.png" alt="CSS" />
+                            <img src="resources/Software_Icons/JavaScript.png" alt="JavaScript" />
+                            <img src="resources/Software_Icons/Git.png" alt="Git" />
+                            <img src="resources/Software_Icons/github.png" alt="GitHub" />
+                            <img src="resources/Software_Icons/Vscode.png" alt="VsCode" />
+                        </div>
+                        <div class="project-buttons">
+                            <!-- Enlace al proyecto -->
+                            <a href="https://adrisp16.github.io/portfolio/" id="project-btn-green" class="project-btn green" target="_blank">Take a look</a>
+                            <!-- Enlace al repositorio en GitHub -->
+                            <a href="https://github.com/AdriSP16/portfolio" id="project-btn-dark" class="project-btn dark" target="_blank">
+                                <img src="resources/Software_Icons/github_inverted.png" alt="GitHub" class="icon-github" />
+                                <span>See code</span>
+                            </a>
+                        </div>                  
+                    </div>
                 </div>
             </div>
         </section>
