--- a/index.html
+++ b/index.html
@@ -75,34 +75,34 @@
                 <h1 id="navbar-title">AdriDevSP</h1>
 
                 <!-- 🌐 Selector de idioma (a la derecha) -->
-                <select id="language-switcher" class="language-switcher" onchange="changeLanguage(this.value)">
+                <select id="language-switcher"  class="language-switcher" onchange="changeLanguage(this.value)">
+                    <option value="en" selected>English</option>
+                    <option value="es">Spanish</option>
+                    <option value="fr">French</option>
+                    <option value="pt">Portuguese</option>
+                    <option value="de">German</option>
+                    <option value="it">Italian</option>
+                    <option value="eu">Basque</option>
                     <option value="ca">Catalá</option>
+                    <option value="ja">Japanese</option>
+                    <option value="ko">Korean</option>
                     <option value="zh">Chinese</option>
-                    <!-- NOT IMPLEMENTED YET <option value="hr">Croatian</option> -->
+                    <option value="no">Norwegian</option>
+                    <option value="se">Sweden</option>
+                    <option value="hr">Croatian</option>
                     <option value="cs">Czech</option>
                     <option value="da">Danish</option>
-                    <!-- NOT IMPLEMENTED YET <option value="sk">Slovak</option> -->
-                    <option value="es">Spanish</option>
-                    <option value="eu">Basque</option>
-                    <option value="fr">French</option>
+                    <option value="sl">Slovenian</option>
+                    <option value="sk">Slovak</option>
+                    <option value="et">Estonio</option>
+                    <option value="pl">Polish</option>
+                    <option value="ka">Georgian</option>
+                    <option value="ru">Russian</option>
                     <option value="el">Greek</option>
                     <option value="he">Hebrew</option>
-                    <option value="en" selected>English</option>
-                    <option value="it">Italian</option>
-                    <option value="ja">Japanese</option>
-                    <!-- NOT IMPLEMENTED YET <option value="ko">Korean</option> -->
-                    <option value="pl">Polish</option>
-                    <option value="pt">Portuguese</option>
-                    <option value="ru">Russian</option>
-                    <!-- NOT IMPLEMENTED YET <option value="si">Slovenian</option> -->
-                    <!-- NOT IMPLEMENTED YET <option value="se">Sweden</option> -->
-                    <!-- NOT IMPLEMENTED YET <option value="th">Thai</option> -->
-                    <!-- NOT IMPLEMENTED YET <option value="ge">Georgian</option> -->
-                    <!-- NOT IMPLEMENTED YET <option value="tr">Turquey</option> -->
-                    <!-- NOT IMPLEMENTED YET <option value="hu">Hungary</option> -->
-                    <!-- NOT IMPLEMENTED YET <option value="ee">Estonio</option> -->
-                    <option value="de">German</option>
-                    <option value="no">Norwegian</option>
+                    <option value="th">Thai</option>
+                    <option value="tr">Turquey</option>
+                    <option value="hu">Hungary</option>
                 </select>
             </div>
         </nav>
