Proyecto NetCalc implementado.

--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
             
                 <!-- Tarjetas de proyectos -->
                 <div class="project-grid">
-                    <!-- Proyecto 1 -->
+                    <!-- Mi portfolio -->
                     <div class="project-card">
                         <img src="resources/Projects/ProyectoPortfolio.png" alt="My portfolio Preview" class="project-img" />
                         <h3 id="miportfolio-name" class="project-name">Mi portfolio</h3>
@@ -270,7 +270,6 @@
                             <img src="resources/Software_Icons/HTML5.png" alt="HTML" />
                             <img src="resources/Software_Icons/CSS3.png" alt="CSS" />
                             <img src="resources/Software_Icons/JavaScript.png" alt="JavaScript" />
-                            <img src="resources/Software_Icons/Git.png" alt="Git" />
                             <img src="resources/Software_Icons/github.png" alt="GitHub" />
                             <img src="resources/Software_Icons/Vscode.png" alt="VsCode" />
                         </div>
@@ -279,6 +278,35 @@
                             <a href="https://adrisp16.github.io/portfolio/" id="project-btn-green" class="project-btn green" target="_blank">Take a look</a>
                             <!-- Enlace al repositorio en GitHub -->
                             <a href="https://github.com/AdriSP16/portfolio" id="project-btn-dark" class="project-btn dark" target="_blank">
+                                <img src="resources/Software_Icons/github_inverted.png" alt="GitHub" class="icon-github" />
+                                <span>See code</span>
+                            </a>
+                        </div>                  
+                    </div>
+
+                    <!-- NetCalc -->
+                    <div class="project-card">
+                        <img src="resources/Projects/NetCalc.png" alt="NetCalc Preview" class="project-img" />
+                        <h3 id="netcalc-name" class="project-name">NetCalc</h3>
+                        <p id="netcalc-desc" class="project-desc">
+                            Aplicación web y de línea de comandos para calcular parámetros de redes IP (dirección de red, broadcast, hosts disponibles, etc.).
+                            Desarrollada con Flask, HTML y JavaScript para la parte visual, y Python para la lógica de red.
+                            Permite exportar resultados en JSON y está pensada para estudiantes y profesionales de redes.
+                        </p>
+                        <div class="project-techs">
+                            <img src="resources/Software_Icons/Python.png" alt="Python" />
+                            <img src="resources/Software_Icons/Flask.png" alt="Flask" />
+                            <img src="resources/Software_Icons/HTML5.png" alt="HTML" />
+                            <img src="resources/Software_Icons/CSS3.png" alt="CSS" />
+                            <img src="resources/Software_Icons/JavaScript.png" alt="JavaScript" />
+                            <img src="resources/Software_Icons/github.png" alt="GitHub" />
+                            <img src="resources/Software_Icons/Vscode.png" alt="VSCode" />
+                        </div>
+                        <div class="project-buttons">
+                            <!-- Enlace al proyecto desplegado (puedes reemplazarlo por tu demo si la tienes) -->
+                            <a href="https://github.com/AdriSP16/netcalc#readme" id="project-btn-green" class="project-btn green" target="_blank">Read more</a>
+                            <!-- Enlace al repositorio en GitHub -->
+                            <a href="https://github.com/AdriSP16/netcalc" id="project-btn-dark" class="project-btn dark" target="_blank">
                                 <img src="resources/Software_Icons/github_inverted.png" alt="GitHub" class="icon-github" />
                                 <span>See code</span>
                             </a>
@@ -400,6 +428,10 @@
                     </a>
                     <a href="https://developer.android.com/jetpack/compose" target="_blank">
                         <img src="resources/Software_Icons/JetpackCompose.png" alt="Jetpack Compose Logo">Jetpack Compose
+                    </a>
+
+                    <a href="https://flask.palletsprojects.com/en/stable/" target="_blank">
+                        <img src="resources/Software_Icons/Flask.png" alt="Jetpack Compose Logo">Flask
                     </a>
                 </div>
             </div>
