Traducciones completadas, portfolio completado por ahora.

--- a/index.html
+++ b/index.html
@@ -275,9 +275,9 @@
                         </div>
                         <div class="project-buttons">
                             <!-- Enlace al proyecto -->
-                            <a href="https://adrisp16.github.io/portfolio/" id="project-btn-green" class="project-btn green" target="_blank">Take a look</a>
+                            <a href="https://adrisp16.github.io/portfolio/" class="project-btn green project-btn-green" target="_blank">Take a look</a>
                             <!-- Enlace al repositorio en GitHub -->
-                            <a href="https://github.com/AdriSP16/portfolio" id="project-btn-dark" class="project-btn dark" target="_blank">
+                            <a href="https://github.com/AdriSP16/portfolio" class="project-btn dark project-btn-dark" target="_blank">
                                 <img src="resources/Software_Icons/github_inverted.png" alt="GitHub" class="icon-github" />
                                 <span>See code</span>
                             </a>
@@ -303,9 +303,9 @@
                         </div>
                         <div class="project-buttons">
                             <!-- Enlace al proyecto desplegado (puedes reemplazarlo por tu demo si la tienes) -->
-                            <a href="https://github.com/AdriSP16/netcalc#readme" id="project-btn-green" class="project-btn green" target="_blank">Read more</a>
+                            <a href="https://github.com/AdriSP16/netcalc#readme" id="netcalc-project-btn-green" class="project-btn green" target="_blank">Read more</a>
                             <!-- Enlace al repositorio en GitHub -->
-                            <a href="https://github.com/AdriSP16/netcalc" id="project-btn-dark" class="project-btn dark" target="_blank">
+                            <a href="https://github.com/AdriSP16/netcalc" class="project-btn dark project-btn-dark" target="_blank">
                                 <img src="resources/Software_Icons/github_inverted.png" alt="GitHub" class="icon-github" />
                                 <span>See code</span>
                             </a>
